--- a/css/main.css
+++ b/css/main.css
@@ -791,34 +791,53 @@ ul {
   margin: 0 auto;
   text-align: center;
   max-width: 100%;
+  padding-top: 118px;
+  width: 480px;
+  height: 400px;
   background-repeat: no-repeat;
   background-color: #2f303a;
   display: flex;
   justify-content: center;
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg.jpg);
+  background-size: 480px 400px;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 480px) and (min-device-pixel-ratio: 2), screen and (min-width: 480px) and (min-resolution: 192dpi), screen and (min-width: 480px) and (min-resolution: 2dppx) {
   .hero {
-    padding-top: 118px;
-    width: 480px;
     height: 400px;
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/header-bg-mob.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg@2x.jpg);
   }
 }
 
 @media screen and (min-width: 768px) {
   .hero {
+    padding-top: 118px;
     width: 768px;
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/header-bg-tablet.jpg);
+    height: 400px;
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg-tablet.jpg);
+    background-size: contain;
+  }
+}
+
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx), screen and (min-width: 768px) and (min-width: 768px) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg-tablet@2x.jpg);
   }
 }
 
 @media screen and (min-width: 1200px) {
   .hero {
     padding-top: 200px;
-    width: 1600px;
-    height: 600px;
-    background-image: linear-gradient(rgba(47, 48, 58, 0.6), rgba(47, 48, 58, 0.6)), url(../images/header-bg.jpg);
+    padding-bottom: 200px;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(rgba(47, 48, 58, 0.6), rgba(47, 48, 58, 0.6)), url(../images/hero-bg-desk.jpg);
+  }
+}
+
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx), screen and (min-width: 1200px) and (min-width: 1200px) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg-desk@2x.jpg);
   }
 }
 
@@ -1048,7 +1067,7 @@ ul {
 }
 
 .modal-form-comment {
-  width: 370px;
+  width: 100%;
   height: 120px;
   padding-top: 12px;
   padding-right: 16px;
@@ -1104,6 +1123,11 @@ ul {
   opacity: 0;
 }
 
+.modal-form-checkbox:checked + .modal-form-custom-checkbox {
+  background-color: #2196F3;
+  border: 1px solid #2196F3;
+}
+
 .modal-form-checkbox:checked + .modal-form-custom-checkbox .modal-form-checkbox-icon {
   opacity: 1;
   fill: #FFFFFF;
@@ -1133,7 +1157,7 @@ ul {
   padding-bottom: 10px;
   padding-left: 55px;
   margin-top: 30px;
-  font-weight: bold;
+  font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.06em;
@@ -1369,7 +1393,7 @@ ul {
   text-align: center;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 767px) {
   .team-list-item-image {
     width: 450px;
     margin-bottom: 30px;
@@ -1411,7 +1435,7 @@ ul {
   }
 }
 
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .team-list-item {
     width: calc((100% - 30px)/2);
   }
