--- a/saas/components/_modal.scss
+++ b/saas/components/_modal.scss
@@ -104,7 +104,7 @@
     fill: $accent-color;
 }
 .modal-form-comment {
-    width: 370px;
+    width: 100%;
     height: 120px;
     padding-top: 12px;
     padding-right: 16px;
@@ -157,6 +157,10 @@
     justify-content: center; 
     opacity: 0;
 }
+.modal-form-checkbox:checked + .modal-form-custom-checkbox {
+    background-color: $accent-color;
+    border: 1px solid $accent-color;
+}
 .modal-form-checkbox:checked + .modal-form-custom-checkbox .modal-form-checkbox-icon {
     opacity: 1;
     fill: $secondary-color;  
@@ -183,7 +187,7 @@
     padding-bottom: 10px;
     padding-left: 55px; 
     margin-top: 30px;
-    font-weight: bold;
+    font-weight: 700;
     font-size: 16px;
     line-height: 1.87;
     letter-spacing: 0.06em;
