--- a/saas/layout/_hero.scss
+++ b/saas/layout/_hero.scss
@@ -2,36 +2,78 @@
     margin: 0 auto;
     text-align: center;
     max-width: 100%;
-    background-repeat: no-repeat; 
-    background-color: rgb(47, 48, 58);  
-    display: flex;
-    justify-content: center;
-
-@media screen and (min-width: 480px) {
-    padding-top: 118px; 
+    padding-top: 118px;
     width: 480px;
     height: 400px;
+    background-repeat: no-repeat; 
+    background-color: rgb(47, 48, 58); 
+    display: flex;
+    justify-content: center;
     background-image: linear-gradient(
-    rgba(47, 48, 58, 0.4),
-    rgba(47, 48, 58, 0.4)),
-    url(../images/header-bg-mob.jpg);
-}
-@media screen and (min-width: 768px) {
-    width: 768px;
-    background-image: linear-gradient(
+   rgba(47, 48, 58, 0.4),
+   rgba(47, 48, 58, 0.4)),
+   url(../images/hero-bg.jpg);
+   background-size: 480px 400px;
+
+
+@media screen and (min-width: 480px) {
+
+@media screen and (min-device-pixel-ratio: 2),
+screen and (min-resolution: 192dpi),
+screen and (min-resolution: 2dppx) {
+   height: 400px;
+
+     background-image: linear-gradient(
      rgba(47, 48, 58, 0.4),
      rgba(47, 48, 58, 0.4)),
-     url(../images/header-bg-tablet.jpg);
-    
- }
+   url(../images/hero-bg@2x.jpg); 
+
+}
+}
+
+@media screen and (min-width: 768px) {
+  padding-top: 118px;
+  width: 768px;
+  height: 400px;
+  background-image: linear-gradient(
+   rgba(47, 48, 58, 0.4),
+   rgba(47, 48, 58, 0.4)),
+   url(../images/hero-bg-tablet.jpg);
+   background-size: contain;
+
+@media screen and (min-device-pixel-ratio: 2),
+screen and (min-resolution: 192dpi),
+screen and (min-resolution: 2dppx),
+screen and (min-width: 768px) {
+   
+     background-image: linear-gradient(
+     rgba(47, 48, 58, 0.4),
+     rgba(47, 48, 58, 0.4)),
+     url(../images/hero-bg-tablet@2x.jpg); 
+     
+}
+}
 @media screen and (min-width: 1200px) {
-    padding-top: 200px;
-    width: 1600px;
-    height: 600px;
-    background-image: linear-gradient(    
-     rgba(47, 48, 58, 0.6),
-     rgba(47, 48, 58, 0.6)),
-       url(../images/header-bg.jpg);
+  padding-top: 200px;
+  padding-bottom: 200px;
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(    
+   rgba(47, 48, 58, 0.6),
+   rgba(47, 48, 58, 0.6)),
+     url(../images/hero-bg-desk.jpg);
+
+@media screen and (min-device-pixel-ratio: 2),
+screen and (min-resolution: 192dpi),
+screen and (min-resolution: 2dppx),
+screen and (min-width: 1200px) {
+    
+      background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)),
+      url(../images/hero-bg-desk@2x.jpg);  
+      
+}
 }
 }
 .hero-title {
@@ -57,6 +99,7 @@
 
 @media screen and (min-width: 1200px) {
      max-width: 726px;
+  
      
 }
 }
