--- a/saas/layout/_team.scss
+++ b/saas/layout/_team.scss
@@ -59,7 +59,7 @@
  }
 .team-list-item-image {
 
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 767px) {
     width: 450px;
     margin-bottom: 30px;
 }
@@ -95,7 +95,7 @@
 
 
 
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
     width: calc((100% - 30px)/2);
 
     &:nth-child(2n+1) {
