--- a/css/main.css
+++ b/css/main.css
@@ -433,8 +433,7 @@ ul {
 @media screen and (min-width: 480px) {
   .container {
     width: 480px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 auto;
   }
 }
 
