--- a/saas/components/_container.scss
+++ b/saas/components/_container.scss
@@ -4,8 +4,7 @@
     padding-left: 15px; 
 @media screen and (min-width: 480px) {
         width: 480px;
-        margin-left: auto;
-        margin-right: auto;
+        margin: 0 auto;
 }
 @media screen and (min-width: 768px) {
     width: 768px;
